--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,10 @@
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
     <%= stylesheet_link_tag    'application', media: 'all' %>
+    
   </head>
   <body>
+    <%= render "shared/navbar" %>
     <%= yield %>
     <%= javascript_include_tag 'application' %>
   </body>
